syntax = "proto3";

package ILLIXRIPC;

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Mesh {
    repeated Vector3 vertices = 1;
    repeated int32 faces = 2;
    repeated Vector3 normals = 3;
}

message IPCPayload {
    string name = 1;
    repeated Mesh meshes = 2;
}